--- a/Activity/to-do list/index.html
+++ b/Activity/to-do list/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
         <div class="form-container">
+            <h2>Add Activitiy</h2>
             <form id="activity-form">
                 <label for="activity">Activity:</label>
                 <input type="text" name="activity" id="activity" placeholder="Enter Activity Name" required>
@@ -42,6 +43,7 @@
         </div>
         <div class="table-container">
             <h2>Activities</h2>
+            <input type="search" name="search" id="search" placeholder="Search">
             <p></p>
             <table>
             </table>
